--- a/CPP/C-C++01_2_语言基础.md
+++ b/CPP/C-C++01_2_语言基础.md
@@ -2,6 +2,446 @@
 
 + C/C++ 编程语言理论基础
 
+## C struct termios VMIN 标志
+
+在C语言中，`struct termios` 结构体用于表示终端设备的配置参数。`VMIN` 是`struct termios` 结构体中的一个成员，用于配置终端设备的非规范模式下的最小字符数。
+
+`VMIN` 成员用于设置终端设备的非规范模式下的最小字符数要求。在终端设备打开的文件描述符上启用了非规范模式（通过 `c_lflag` 中的 `ICANON` 标志），并且设置了非零的 `VMIN` 值时，系统会等待输入的字符数达到指定的最小值后才返回读取操作。
+
+当读取操作获取到指定的最小字符数后，不会等待超过 `VMIN` 值的字符数再返回。如果在达到最小字符数之前读取操作遇到文件末尾（EOF）或错误，读取操作也会返回。
+
+以下是一个示例，展示如何使用 `VMIN` 成员来配置终端设备的非规范模式下的最小字符数：
+
+```c
+#include <stdio.h>
+#include <termios.h>
+#include <fcntl.h>
+#include <unistd.h>
+
+int main() {
+    const char *devicePath = "/dev/ttyS0"; // 串口设备文件路径
+
+    // 使用 O_RDWR 标志打开串口设备文件
+    int fd = open(devicePath, O_RDWR);
+
+    if (fd == -1) {
+        perror("Error opening device file");
+        return 1;
+    }
+
+    // 获取当前终端设备的配置参数
+    struct termios serialConfig;
+    tcgetattr(fd, &serialConfig);
+
+    // 配置非规范模式
+    serialConfig.c_lflag &= ~ICANON;
+
+    // 设置非规范模式下的最小字符数为 5
+    serialConfig.c_cc[VMIN] = 5;
+
+    // 将新的配置参数应用到终端设备
+    tcsetattr(fd, TCSANOW, &serialConfig);
+
+    // 进行串口通信...
+
+    close(fd);
+
+    return 0;
+}
+```
+
+在上述示例中，我们使用 `open()` 函数打开了一个串口设备文件 "/dev/ttyS0"，然后获取了当前终端设备的配置参数。我们将终端设备配置为非规范模式，并设置了非零的 `VMIN` 值来配置最小字符数要求为 5。
+
+需要注意的是，`VMIN` 成员只在非规范模式下生效，即在设置了 `ICANON` 标志为 0 的情况下才会生效。在规范模式下，输入数据会等待达到终端设备的行缓冲大小或回车键才返回。
+
+## C struct termios VTIME 标志
+
+在C语言中，`struct termios` 结构体用于表示终端设备的配置参数。`VTIME` 是`struct termios` 结构体中的一个成员，用于配置终端设备的读取超时。
+
+`VTIME` 成员用于设置终端设备的非规范模式下的读取超时。当在终端设备打开的文件描述符上启用了非规范模式（通过 `c_lflag` 中的 `ICANON` 标志），并且设置了非零的 `VTIME` 值时，系统会等待一段时间以等待输入数据。
+
+`VTIME` 值的单位是十分之一秒（1/10 秒）。如果设置了非零的 `VTIME` 值，则在读取输入数据时，系统会等待指定的超时时间。如果在超时时间内没有数据可读，则读取操作会返回，如果有数据可读，读取操作会立即返回。
+
+以下是一个示例，展示如何使用 `VTIME` 成员来配置终端设备的非规范模式下的读取超时：
+
+```c
+#include <stdio.h>
+#include <termios.h>
+#include <fcntl.h>
+#include <unistd.h>
+
+int main() {
+    const char *devicePath = "/dev/ttyS0"; // 串口设备文件路径
+
+    // 使用 O_RDWR 标志打开串口设备文件
+    int fd = open(devicePath, O_RDWR);
+
+    if (fd == -1) {
+        perror("Error opening device file");
+        return 1;
+    }
+
+    // 获取当前终端设备的配置参数
+    struct termios serialConfig;
+    tcgetattr(fd, &serialConfig);
+
+    // 配置非规范模式
+    serialConfig.c_lflag &= ~ICANON;
+
+    // 设置读取超时为 2 秒（20 * 1/10 秒）
+    serialConfig.c_cc[VTIME] = 20;
+
+    // 将新的配置参数应用到终端设备
+    tcsetattr(fd, TCSANOW, &serialConfig);
+
+    // 进行串口通信...
+
+    close(fd);
+
+    return 0;
+}
+```
+
+在上述示例中，我们使用 `open()` 函数打开了一个串口设备文件 "/dev/ttyS0"，然后获取了当前终端设备的配置参数。我们将终端设备配置为非规范模式，并设置了非零的 `VTIME` 值来配置读取超时为 2 秒。
+
+需要注意的是，`VTIME` 成员只在非规范模式下生效，即在设置了 `ICANON` 标志为 0 的情况下才会生效。在规范模式下，输入数据会立即返回，不会等待超时。
+
+## C struct termios CSTOPB 标志
+
+在C语言中，`struct termios` 结构体用于表示终端设备的配置参数。`CSTOPB` 是`struct termios` 结构体中的一个标志，用于配置终端设备的停止位数。
+
+`CSTOPB` 标志用于设置终端设备的停止位数。当设置了这个标志时，终端设备会使用两个停止位作为数据帧的停止位。如果未设置这个标志，终端设备将使用一个停止位。
+
+以下是一个示例，展示如何使用 `CSTOPB` 标志来配置终端设备的停止位数为两个：
+
+```c
+#include <stdio.h>
+#include <termios.h>
+#include <fcntl.h>
+#include <unistd.h>
+
+int main() {
+    const char *devicePath = "/dev/ttyS0"; // 串口设备文件路径
+
+    // 使用 O_RDWR 标志打开串口设备文件
+    int fd = open(devicePath, O_RDWR);
+
+    if (fd == -1) {
+        perror("Error opening device file");
+        return 1;
+    }
+
+    // 获取当前终端设备的配置参数
+    struct termios serialConfig;
+    tcgetattr(fd, &serialConfig);
+
+    // 设置停止位数为两个
+    serialConfig.c_cflag |= CSTOPB;
+
+    // 将新的配置参数应用到终端设备
+    tcsetattr(fd, TCSANOW, &serialConfig);
+
+    // 进行串口通信...
+
+    close(fd);
+
+    return 0;
+}
+```
+
+在上述示例中，我们使用 `open()` 函数打开了一个串口设备文件 "/dev/ttyS0"，然后获取了当前终端设备的配置参数。通过使用 `CSTOPB` 标志，我们设置了终端设备的停止位数为两个。
+
+需要注意的是，设置停止位数的选择取决于实际的通信需求和硬件要求。在大多数情况下，使用一个停止位已经足够，但在某些情况下，可能需要使用两个停止位以确保数据传输的可靠性。
+
+## C struct termios ISTRIP 标志
+
+在C语言中，`struct termios` 结构体用于表示终端设备的配置参数。`ISTRIP` 是`struct termios` 结构体中的一个标志，用于配置终端设备的输入字符处理。
+
+`ISTRIP` 标志用于设置终端设备在接收数据时是否对输入的字符进行去掉第8位（最高位）的处理。当设置了这个标志时，终端设备会将接收到的字符的最高位设置为0。
+
+以下是一个示例，展示如何使用 `ISTRIP` 标志来配置终端设备的输入字符处理：
+
+```c
+#include <stdio.h>
+#include <termios.h>
+#include <fcntl.h>
+#include <unistd.h>
+
+int main() {
+    const char *devicePath = "/dev/ttyS0"; // 串口设备文件路径
+
+    // 使用 O_RDWR 标志打开串口设备文件
+    int fd = open(devicePath, O_RDWR);
+
+    if (fd == -1) {
+        perror("Error opening device file");
+        return 1;
+    }
+
+    // 获取当前终端设备的配置参数
+    struct termios serialConfig;
+    tcgetattr(fd, &serialConfig);
+
+    // 设置输入字符处理，去掉第8位
+    serialConfig.c_iflag |= ISTRIP;
+
+    // 将新的配置参数应用到终端设备
+    tcsetattr(fd, TCSANOW, &serialConfig);
+
+    // 进行串口通信...
+
+    close(fd);
+
+    return 0;
+}
+```
+
+在上述示例中，我们使用 `open()` 函数打开了一个串口设备文件 "/dev/ttyS0"，然后获取了当前终端设备的配置参数。通过使用 `ISTRIP` 标志，我们设置了输入字符处理，使终端设备在接收数据时去掉输入字符的最高位。
+
+需要注意的是，使用 `ISTRIP` 标志会改变接收到的字符的数据，因此在使用该标志时，需要根据实际需求来进行配置。在一些情况下，去掉输入字符的最高位可能是有意义的，但在其他情况下，可能需要保留字符的所有位。
+
+## C struct termios INPCK 标志
+
+在C语言中，`struct termios` 结构体用于表示终端设备的配置参数。`INPCK` 是`struct termios` 结构体中的一个标志，用于配置终端设备的输入奇偶校验检测。
+
+`INPCK` 标志用于启用输入奇偶校验检测。当设置了这个标志时，终端设备会在接收数据时进行奇偶校验检测，以验证接收的数据的完整性。
+
+以下是一个示例，展示如何使用 `INPCK` 标志来配置终端设备的输入奇偶校验检测功能：
+
+```c
+#include <stdio.h>
+#include <termios.h>
+#include <fcntl.h>
+#include <unistd.h>
+
+int main() {
+    const char *devicePath = "/dev/ttyS0"; // 串口设备文件路径
+
+    // 使用 O_RDWR 标志打开串口设备文件
+    int fd = open(devicePath, O_RDWR);
+
+    if (fd == -1) {
+        perror("Error opening device file");
+        return 1;
+    }
+
+    // 获取当前终端设备的配置参数
+    struct termios serialConfig;
+    tcgetattr(fd, &serialConfig);
+
+    // 启用输入奇偶校验检测
+    serialConfig.c_iflag |= INPCK;
+
+    // 将新的配置参数应用到终端设备
+    tcsetattr(fd, TCSANOW, &serialConfig);
+
+    // 进行串口通信...
+
+    close(fd);
+
+    return 0;
+}
+```
+
+在上述示例中，我们使用 `open()` 函数打开了一个串口设备文件 "/dev/ttyS0"，然后获取了当前终端设备的配置参数。通过使用 `INPCK` 标志，我们启用了输入奇偶校验检测功能。这将使终端设备在接收数据时进行奇偶校验检测，以确保接收到的数据的正确性。
+
+需要注意的是，输入奇偶校验检测功能的使用取决于实际的通信需求和硬件要求。在某些情况下，启用输入奇偶校验检测可以增加数据传输的可靠性，但在其他情况下，可能不需要进行奇偶校验检测。
+
+## C struct termios PARODD 标志
+
+在C语言中，`struct termios` 结构体用于表示终端设备的配置参数。`PARODD` 是`struct termios` 结构体中的一个标志，用于配置终端设备的奇偶校验模式。
+
+`PARODD` 标志用于设置奇偶校验的模式。当设置了这个标志时，终端设备会使用奇校验模式，即在每个数据字节中包括奇数个"1"位，从而保持数据字节的奇校验性。
+
+以下是一个示例，展示如何使用 `PARODD` 标志来配置终端设备的奇偶校验模式为奇校验：
+
+```c
+#include <stdio.h>
+#include <termios.h>
+#include <fcntl.h>
+#include <unistd.h>
+
+int main() {
+    const char *devicePath = "/dev/ttyS0"; // 串口设备文件路径
+
+    // 使用 O_RDWR 标志打开串口设备文件
+    int fd = open(devicePath, O_RDWR);
+
+    if (fd == -1) {
+        perror("Error opening device file");
+        return 1;
+    }
+
+    // 获取当前终端设备的配置参数
+    struct termios serialConfig;
+    tcgetattr(fd, &serialConfig);
+
+    // 设置奇偶校验模式为奇校验
+    serialConfig.c_cflag |= PARENB; // 启用奇偶校验功能
+    serialConfig.c_cflag |= PARODD; // 设置为奇校验模式
+
+    // 将新的配置参数应用到终端设备
+    tcsetattr(fd, TCSANOW, &serialConfig);
+
+    // 进行串口通信...
+
+    close(fd);
+
+    return 0;
+}
+```
+
+在上述示例中，我们使用 `open()` 函数打开了一个串口设备文件 "/dev/ttyS0"，然后获取了当前终端设备的配置参数。通过使用 `PARENB` 和 `PARODD` 标志，我们启用了奇偶校验功能，并将奇偶校验模式设置为奇校验。
+
+需要注意的是，奇偶校验模式的选择取决于实际的通信需求和硬件要求。在某些情况下，使用奇校验可以增加数据传输的可靠性，但在其他情况下，可能需要使用偶校验或者不使用奇偶校验。
+
+## C struct termios PARENB 标志
+
+在C语言中，`struct termios` 结构体用于表示终端设备的配置参数。`PARENB` 是`struct termios` 结构体中的一个标志，用于配置终端设备的奇偶校验。
+
+`PARENB` 标志用于启用奇偶校验功能。当设置了这个标志时，终端设备会在发送和接收数据时进行奇偶校验。奇偶校验是一种数据完整性的检查机制，用于检测数据传输过程中的错误。
+
+以下是一个示例，展示如何使用 `PARENB` 标志来配置终端设备的奇偶校验功能：
+
+```c
+#include <stdio.h>
+#include <termios.h>
+#include <fcntl.h>
+#include <unistd.h>
+
+int main() {
+    const char *devicePath = "/dev/ttyS0"; // 串口设备文件路径
+
+    // 使用 O_RDWR 标志打开串口设备文件
+    int fd = open(devicePath, O_RDWR);
+
+    if (fd == -1) {
+        perror("Error opening device file");
+        return 1;
+    }
+
+    // 获取当前终端设备的配置参数
+    struct termios serialConfig;
+    tcgetattr(fd, &serialConfig);
+
+    // 启用奇偶校验功能
+    serialConfig.c_cflag |= PARENB;
+
+    // 将新的配置参数应用到终端设备
+    tcsetattr(fd, TCSANOW, &serialConfig);
+
+    // 进行串口通信...
+
+    close(fd);
+
+    return 0;
+}
+```
+
+在上述示例中，我们使用 `open()` 函数打开了一个串口设备文件 "/dev/ttyS0"，然后获取了当前终端设备的配置参数。通过使用 `PARENB` 标志，我们启用了奇偶校验功能。在这个示例中，数据将会在发送和接收时进行奇偶校验。
+
+需要注意的是，奇偶校验功能的使用取决于实际的通信需求和硬件要求。在某些情况下，使用奇偶校验可以增加数据传输的可靠性，但在其他情况下，可能不需要使用奇偶校验。
+
+## C struct termios CSIZE 标志
+
+在C语言中，`struct termios` 结构体用于表示终端设备的配置参数。`CSIZE` 是`struct termios` 结构体中的一个标志，用于配置终端设备的数据位数。
+
+`CSIZE` 标志是一个位掩码，用于指定数据位的大小。在`struct termios` 结构体中，数据位的大小可以使用以下常量之一来设置：
+
+- `CS5`：5位数据位
+- `CS6`：6位数据位
+- `CS7`：7位数据位
+- `CS8`：8位数据位
+
+以下是一个示例，展示如何使用 `CSIZE` 标志来配置终端设备的数据位大小：
+
+```c
+#include <stdio.h>
+#include <termios.h>
+#include <fcntl.h>
+#include <unistd.h>
+
+int main() {
+    const char *devicePath = "/dev/ttyS0"; // 串口设备文件路径
+
+    // 使用 O_RDWR 标志打开串口设备文件
+    int fd = open(devicePath, O_RDWR);
+
+    if (fd == -1) {
+        perror("Error opening device file");
+        return 1;
+    }
+
+    // 获取当前终端设备的配置参数
+    struct termios serialConfig;
+    tcgetattr(fd, &serialConfig);
+
+    // 设置数据位大小为 8 位
+    serialConfig.c_cflag &= ~CSIZE; // 清除现有的数据位设置
+    serialConfig.c_cflag |= CS8;    // 设置数据位大小为 8 位
+
+    // 将新的配置参数应用到终端设备
+    tcsetattr(fd, TCSANOW, &serialConfig);
+
+    // 进行串口通信...
+
+    close(fd);
+
+    return 0;
+}
+```
+
+在上述示例中，我们使用 `open()` 函数打开了一个串口设备文件 "/dev/ttyS0"，然后获取了当前终端设备的配置参数。通过使用 `CSIZE` 标志，我们可以设置数据位的大小。在这个示例中，我们将数据位的大小设置为 8 位。
+
+需要注意的是，数据位的大小需要根据实际通信需求和硬件要求进行设置。不同的串口设备可能有不同的数据位大小要求。
+
+## C struct termios CLOCAL 标志 
+
+在C语言中，`struct termios` 结构体用于表示终端设备的配置参数。`CLOCAL` 是`struct termios` 结构体中的一个标志，用于在串口通信中配置终端设备的行为。
+
+`CLOCAL` 标志用于设置终端设备在串口通信中的本地连接模式。当设置了 `CLOCAL` 标志时，终端设备将不会考虑调制解调器（Modem）的状态，即终端设备不会关心调制解调器是否连接。
+
+以下是一个示例，展示如何使用 `CLOCAL` 标志来配置终端设备：
+
+```c
+#include <stdio.h>
+#include <termios.h>
+#include <fcntl.h>
+#include <unistd.h>
+
+int main() {
+    const char *devicePath = "/dev/ttyS0"; // 串口设备文件路径
+
+    // 使用 O_RDWR 标志打开串口设备文件
+    int fd = open(devicePath, O_RDWR);
+
+    if (fd == -1) {
+        perror("Error opening device file");
+        return 1;
+    }
+
+    // 获取当前终端设备的配置参数
+    struct termios serialConfig;
+    tcgetattr(fd, &serialConfig);
+
+    // 设置 CLOCAL 标志，忽略调制解调器状态
+    serialConfig.c_cflag |= CLOCAL;
+
+    // 将新的配置参数应用到终端设备
+    tcsetattr(fd, TCSANOW, &serialConfig);
+
+    // 进行串口通信...
+
+    close(fd);
+
+    return 0;
+}
+```
+
+在上述示例中，我们使用 `open()` 函数打开了一个串口设备文件 "/dev/ttyS0"，然后获取了当前终端设备的配置参数。我们通过设置 `CLOCAL` 标志，将其添加到 `c_cflag` 字段中，以忽略调制解调器的状态。最后，我们使用 `tcsetattr()` 函数将新的配置参数应用到终端设备。
+
+需要注意的是，`CLOCAL` 标志的使用取决于实际的通信环境和需求。在某些情况下，忽略调制解调器状态可能是合适的，但在其他情况下，可能需要使用调制解调器状态来确保通信的稳定性。
+
 ## C open() O_LARGEFILE 标志
 
 在C语言中，`open()` 函数用于打开文件，同时还可以通过添加一些标志来指定文件的打开方式和行为。`O_LARGEFILE` 是一个标志，用于在一些操作系统中支持大文件的功能。
