--- a/CPP/C-C++06_编程技巧.md
+++ b/CPP/C-C++06_编程技巧.md
@@ -2,6 +2,39 @@
 
 + 常用的编程技巧，使用示例与方法
 
+## C uint16_t 怎么存储到uint8_t数组中
+
+将 `uint16_t` 数据存储到 `uint8_t` 数组中需要进行字节拆分，因为 `uint16_t` 是两个字节（16位），而 `uint8_t` 是一个字节（8位）。通常情况下，高位字节（Most Significant Byte，MSB）会存储在数组的前面，低位字节（Least Significant Byte，LSB）会存储在数组的后面。
+
+以下是一个示例，展示如何将 `uint16_t` 数据存储到 `uint8_t` 数组中：
+
+```c
+#include <stdio.h>
+#include <stdint.h>
+
+int main() {
+    uint16_t value = 0xABCD; // 要存储的 uint16_t 数据
+
+    // 将 uint16_t 数据拆分成两个 uint8_t 字节
+    uint8_t byte1 = (value >> 8) & 0xFF; // 高位字节
+    uint8_t byte2 = value & 0xFF;        // 低位字节
+
+    // 存储到 uint8_t 数组中
+    uint8_t byteArray[2];
+    byteArray[0] = byte1;
+    byteArray[1] = byte2;
+
+    printf("Byte 1: 0x%02X\n", byteArray[0]);
+    printf("Byte 2: 0x%02X\n", byteArray[1]);
+
+    return 0;
+}
+```
+
+在上述示例中，我们首先将 `uint16_t` 数据 `value` 拆分成高位字节 `byte1` 和低位字节 `byte2`。然后，将这两个字节存储到 `uint8_t` 数组 `byteArray` 中。通过打印数组中的字节，我们可以看到 `uint16_t` 数据被正确地存储在了 `uint8_t` 数组中。
+
+需要注意的是，字节拆分和存储的顺序可能受到字节序的影响。在不同的机器架构上，字节序可能是大端序（Big Endian）或小端序（Little Endian）。在实际应用中，你需要根据你的机器架构来确定正确的字节顺序。
+
 ## C 打开设备文件 详解 示例
 
 在C语言中，打开设备文件通常是通过文件路径来实现的，类似于打开普通的文件。设备文件可以是串口、并口、磁盘、字符设备等。下面是一个简单的示例，演示如何在Linux系统中打开串口设备文件。
