--- a/CPP/C-C++07_常用算法.md
+++ b/CPP/C-C++07_常用算法.md
@@ -1,3 +1,74 @@
+## 简介
+
++ 常见算法
+
+## Modbus通信协议 CRC16校验码详解
+
+Modbus通信协议是一种用于在不同设备之间进行通信的协议，常用于工业自动化和控制系统。其中，CRC16校验码是用来验证通信数据的完整性的一部分。
+
+CRC（Cyclic Redundancy Check）是一种错误检测码，通过对数据进行多项式除法运算，生成一个校验码，用于检测数据传输过程中的错误。CRC16是一种使用16位位宽的CRC校验码。
+
+Modbus协议在通信中使用CRC16校验码来确保数据的准确传输。具体而言，CRC16校验码的计算方式是对要发送或接收的数据按照一定规则进行计算，然后将计算得到的校验码附加到数据中，接收方在接收数据后也会进行相同的校验计算，并比较计算得到的校验码是否与接收到的校验码相符，以判断数据是否完整、正确。
+
+以下是CRC16校验码计算的主要步骤：
+
+1. 初始化CRC寄存器为0xFFFF。
+2. 针对每个字节（8位）的数据，从最高位开始，依次进行以下操作：
+   - 将CRC寄存器的最低位与当前数据位异或（XOR）操作。
+   - 对CRC寄存器进行右移一位。
+   - 如果异或操作的结果为1，则将CRC寄存器与预定义的多项式（通常是0xA001）进行异或操作。
+3. 继续处理下一个字节的数据，重复步骤2，直到所有数据字节都被处理。
+4. 最终CRC寄存器中的值即为CRC16校验码。
+
+在接收方，接收到数据后，同样使用相同的计算方式进行CRC16校验计算，然后将计算得到的校验码与接收到的校验码比较。如果相符，则说明数据传输没有错误，否则可能存在错误。
+
+需要注意的是，CRC校验并不能纠正错误，而只能检测错误。如果CRC校验不通过，通常需要进行数据重传等处理来保证数据的正确传输。
+
+上述解释是CRC16校验码的基本原理，实际使用中可能会涉及一些细节和配置参数，取决于通信协议的具体要求。不同的Modbus协议变种可能会有稍微不同的CRC16计算方法，因此在实际应用中，需要参考相关的协议文档或标准来进行实现。
+
+## C modbus crc16 校验码 示例
+
+Modbus通信协议中常使用CRC16校验码来验证数据的完整性。以下是一个示例，展示如何计算Modbus CRC16校验码。
+
+```c
+#include <stdio.h>
+#include <stdint.h>
+
+// 计算CRC16校验码
+uint16_t calculate_crc16(const uint8_t *data, size_t length) {
+    uint16_t crc = 0xFFFF;
+
+    for (size_t i = 0; i < length; ++i) {
+        crc ^= data[i];
+        for (int j = 0; j < 8; ++j) {
+            if (crc & 0x0001) {
+                crc >>= 1;
+                crc ^= 0xA001;
+            } else {
+                crc >>= 1;
+            }
+        }
+    }
+
+    return crc;
+}
+
+int main() {
+    uint8_t data[] = {0x01, 0x03, 0x00, 0x00, 0x00, 0x02}; // 示例数据
+    size_t data_length = sizeof(data) / sizeof(data[0]);
+
+    uint16_t crc = calculate_crc16(data, data_length);
+
+    printf("CRC16: 0x%04X\n", crc);
+
+    return 0;
+}
+```
+
+在上述示例中，`calculate_crc16` 函数接受一个字节数组和其长度作为参数，并计算其CRC16校验码。`main` 函数演示了如何调用该函数来计算示例数据的CRC16校验码。
+
+需要注意的是，CRC16校验码的计算是Modbus通信协议中的一部分，不同的实现可能会有细微的差异。上述示例展示了一个常见的CRC16计算方法，但在实际应用中，你需要根据通信协议的规范和要求来进行计算。
+
 ## 查找算法
 
 在C++中，可以使用标准库提供的范围查找算法来在容器中查找特定元素或满足特定条件的元素。以下是一些常用的范围查找算法：
