--- a/Grandhonor/Robot-协作机器人开发/vcr-doc/1-3_项目测试.md
+++ b/Grandhonor/Robot-协作机器人开发/vcr-doc/1-3_项目测试.md
@@ -12,3 +12,16 @@
 m_conf = "@--detector-models@/mnt/remote/190-mnt/zhangjunyi/Models/VCR/1080/DETECT.conf@xxx@yyyy@--detector-type@1@--detector-gap@0@--detector-fps@5@--detector-thresholds@0.4@--tracker-type@2@--trace-cast";
 m_delim = "@";
 ```
+
+## 存放点
+
+```json
+"point":[
+            -0.3107980310302541,
+            0.005474609033723757,
+            0.1660736583718917,
+            0.14187905419997576,
+            -3.0985265129810493,
+            0.07320095015205874
+        ]
+```
