--- a/CPP/C-C++01_2_语言基础.md
+++ b/CPP/C-C++01_2_语言基础.md
@@ -2,6 +2,47 @@
 
 + C/C++ 编程语言理论基础
 
+## C++ 哈希表
+
+C++中的哈希表是一种常用的数据结构，用于实现键值对的存储和检索。哈希表基于哈希函数将键映射到一个索引，然后在该索引处存储相应的值。这可以大大提高数据的访问速度，因为您可以通过键快速查找值，而不需要遍历整个数据集。
+
+在C++中，可以使用标准库中的`std::unordered_map`来创建哈希表。以下是使用`std::unordered_map`的基本示例：
+
+```cpp
+#include <iostream>
+#include <unordered_map>
+#include <string>
+
+int main() {
+    // 创建一个哈希表，将字符串键映射到整数值
+    std::unordered_map<std::string, int> myMap;
+
+    // 插入键值对
+    myMap["Alice"] = 25;
+    myMap["Bob"] = 30;
+    myMap["Charlie"] = 35;
+
+    // 查找值
+    std::string name = "Bob";
+    if (myMap.find(name) != myMap.end()) {
+        std::cout << name << "的年龄是：" << myMap[name] << "岁" << std::endl;
+    } else {
+        std::cout << name << "不在哈希表中" << std::endl;
+    }
+
+    // 遍历哈希表
+    for (const auto& pair : myMap) {
+        std::cout << "键: " << pair.first << ", 值: " << pair.second << std::endl;
+    }
+
+    return 0;
+}
+```
+
+在上面的示例中，我们首先包含了相关的头文件，然后创建了一个`std::unordered_map`对象，该对象将字符串映射到整数值。我们插入了几个键值对，然后使用`find`方法查找特定键的值，并遍历整个哈希表来访问所有键值对。
+
+请注意，C++标准库中的`std::unordered_map`实现了哈希表，但在某些情况下，您可能需要自定义哈希函数或提供自定义比较函数来处理特殊数据类型。此外，C++11引入了`std::unordered_map`之外的一些其他哈希容器，例如`std::unordered_set`（用于存储唯一的值）和`std::unordered_multimap`（允许多个相同的键）。根据您的需求，您可以选择合适的容器类型。
+
 ## C struct termios VMIN 标志
 
 在C语言中，`struct termios` 结构体用于表示终端设备的配置参数。`VMIN` 是`struct termios` 结构体中的一个成员，用于配置终端设备的非规范模式下的最小字符数。
