--- a/Grandhonor/Robot-协作机器人开发/vcr-doc/1-3_项目测试.md
+++ b/Grandhonor/Robot-协作机器人开发/vcr-doc/1-3_项目测试.md
@@ -25,3 +25,41 @@ m_delim = "@";
             0.07320095015205874
         ]
 ```
+
+## 正解
+
++ 输入
+```json
+{
+        "joint": [1,2,3,4,5,6]
+}
+## joint: 输入的关节角
+```
+
++ 输出
+```json
+{
+        "cart": [1,2,3,4,5,6]
+}
+## cart: 与输入对应的笛卡尔工具中心点位置
+```
+
+## 逆解
+
++ 输入
+```json
+{
+        "cart": [1,2,3,4,5,6]
+        "jointRef": [0,0,1.5708,0,1.5708,0]
+}
+## cart: 笛卡尔工具中心点位置
+## jointRef: 参考关节角，将作为迭代的起点。若不设置，将使用机器人当前关节角。
+```
+
++ 输出
+```json
+{
+        "joint": [1,2,3,4,5,6]
+}
+## joint: 与输入对应的关节角
+```
