--- a/CPP/C-C++01_2_语言基础.md
+++ b/CPP/C-C++01_2_语言基础.md
@@ -2,6 +2,65 @@
 
 + C/C++ 编程语言理论基础
 
+## C++ 哈希表 详解
+
+哈希表（Hash Table），也称为散列表，是一种数据结构，用于高效地存储和检索数据。它通过将数据与一个哈希函数计算的索引关联起来，从而允许在常量时间内进行数据插入、查找和删除操作。C++ 中可以使用标准库提供的 `std::unordered_map` 实现哈希表，以下是哈希表的详细解释：
+
+1. **哈希函数**：
+   哈希表的核心是哈希函数。这个函数将输入的数据（通常是键）转换成一个整数，该整数通常被称为哈希码或哈希值。这个哈希值用于确定数据在哈希表中的存储位置。一个好的哈希函数应该将数据均匀地分布到哈希表的不同位置，以避免冲突（多个数据映射到同一个位置）。
+
+2. **哈希表的结构**：
+   哈希表通常是一个数组，每个元素被称为一个“桶”或“槽”。每个桶可以存储一个数据项或多个数据项，具体取决于哈希函数和解决冲突的方法。
+
+3. **解决冲突**：
+   由于哈希函数的限制，可能会发生冲突，即多个数据项被映射到同一个桶中。解决冲突的常见方法包括：
+   - **链地址法**（Chaining）：每个桶存储一个链表或其他数据结构，用于存储冲突的数据项。
+   - **开放寻址法**（Open Addressing）：当发生冲突时，继续尝试找到下一个可用的桶，直到找到一个空桶或遍历整个哈希表。
+
+4. **C++ 中的 `std::unordered_map`**：
+   C++ 标准库提供了 `std::unordered_map` 类模板，它是一个使用哈希表实现的关联容器，用于存储键值对。以下是 `std::unordered_map` 的一些常见操作：
+
+   - 插入数据：使用 `insert` 或 `emplace` 方法插入键值对。
+   - 查找数据：使用 `find` 方法查找指定键的值。
+   - 删除数据：使用 `erase` 方法删除指定键的值。
+   - 迭代哈希表：可以使用迭代器遍历哈希表中的键值对。
+   - 获取大小：使用 `size` 方法获取哈希表中键值对的数量。
+
+下面是一个简单示例，演示如何使用 `std::unordered_map`：
+
+```cpp
+#include <iostream>
+#include <unordered_map>
+
+int main() {
+    // 创建一个哈希表
+    std::unordered_map<std::string, int> hashMap;
+
+    // 插入键值对
+    hashMap["Alice"] = 25;
+    hashMap["Bob"] = 30;
+
+    // 查找键的值
+    if (hashMap.find("Alice") != hashMap.end()) {
+        std::cout << "Alice's age is " << hashMap["Alice"] << std::endl;
+    } else {
+        std::cout << "Alice not found in the map." << std::endl;
+    }
+
+    // 删除键值对
+    hashMap.erase("Bob");
+
+    // 遍历哈希表
+    for (const auto& pair : hashMap) {
+        std::cout << pair.first << "'s age is " << pair.second << std::endl;
+    }
+
+    return 0;
+}
+```
+
+这是哈希表的基本概念和在C++中使用哈希表的简单示例。在实际应用中，选择合适的哈希函数和解决冲突的策略以及考虑性能是非常重要的。此外，C++标准库还提供了其他关联容器，如`std::map`，它使用红黑树实现，适用于一些特定的使用情况。
+
 ## C++ 哈希表
 
 C++中的哈希表是一种常用的数据结构，用于实现键值对的存储和检索。哈希表基于哈希函数将键映射到一个索引，然后在该索引处存储相应的值。这可以大大提高数据的访问速度，因为您可以通过键快速查找值，而不需要遍历整个数据集。
