--- a/CPP/C-C++01_2_语言基础.md
+++ b/CPP/C-C++01_2_语言基础.md
@@ -2,6 +2,394 @@
 
 + C/C++ 编程语言理论基础
 
+## C++ std::set 详解
+
+`std::set` 是 C++ 标准库中的一个关联容器，它实现了有序不重复元素的集合。在 `std::set` 中，元素按照升序排序，并且不允许重复元素的存在。`std::set` 是基于红黑树（Red-Black Tree）数据结构实现的，因此插入、删除和查找操作都具有对数时间复杂度（O(log n)）。
+
+以下是关于 `std::set` 的详解：
+
+### 包含头文件
+
+要使用 `std::set`，你需要包含 `<set>` 头文件：
+
+```cpp
+#include <set>
+```
+
+### 创建和初始化 `std::set`
+
+你可以使用多种方式来创建和初始化 `std::set`：
+
+```cpp
+std::set<int> mySet; // 创建一个空的 set，存储整数
+```
+
+你还可以在创建时指定初始元素：
+
+```cpp
+std::set<int> mySet = {10, 20, 30}; // 创建并初始化 set
+```
+
+### 插入元素
+
+可以使用 `insert()` 方法来向 `std::set` 中插入元素。插入操作会自动维护集合的有序性和不重复性：
+
+```cpp
+mySet.insert(40); // 向 set 中插入元素 40
+```
+
+### 删除元素
+
+可以使用 `erase()` 方法来删除 `std::set` 中的元素。你可以指定要删除的元素值或迭代器：
+
+```cpp
+mySet.erase(20); // 删除值为 20 的元素
+```
+
+### 查找元素
+
+你可以使用 `find()` 方法来查找 `std::set` 中的元素。如果元素存在，它会返回元素的迭代器；否则，返回 `end()`：
+
+```cpp
+std::set<int>::iterator it = mySet.find(30);
+if (it != mySet.end()) {
+    // 元素 30 存在
+} else {
+    // 元素 30 不存在
+}
+```
+
+### 遍历元素
+
+你可以使用迭代器来遍历 `std::set` 中的元素：
+
+```cpp
+for (std::set<int>::iterator it = mySet.begin(); it != mySet.end(); ++it) {
+    int value = *it;
+    // 处理元素 value
+}
+```
+
+### 其他常用操作
+
+`std::set` 还支持其他一些常用操作，例如：
+
+- `size()`：获取集合中元素的数量。
+- `empty()`：检查集合是否为空。
+- `clear()`：清空集合中的所有元素。
+- `lower_bound()` 和 `upper_bound()`：分别查找不小于（大于等于）和大于给定值的元素的迭代器。
+
+### 注意事项
+
+- `std::set` 中的元素是有序的，因此插入和删除操作相对较慢，但查找操作非常高效。
+- `std::set` 不允许重复元素。如果你需要允许重复元素的集合，请考虑使用 `std::multiset`。
+- 在 C++11 及更高版本中，你还可以使用范围迭代器和 C++11 范围循环来更方便地遍历 `std::set` 中的元素。
+
+`std::set` 是一个强大的数据结构，特别适用于需要快速查找和有序存储不重复元素的情况。
+
+## C++ std::bind 详解
+
+`std::bind()` 是 C++11 中引入的函数，它允许你创建一个可调用对象（函数对象）并将参数绑定到该对象上。这在很多情况下非常有用，特别是在处理回调函数、函数对象、线程和 STL 算法时。
+
+`std::bind()` 函数位于 `<functional>` 头文件中，你需要包含该头文件才能使用它。以下是关于 `std::bind()` 的详细解释和示例用法：
+
+### `std::bind()` 函数签名
+
+`std::bind()` 的一般函数签名如下：
+
+```cpp
+template<class Fn, class... Args>
+/*unspecified*/ bind(Fn&& fn, Args&&... args);
+```
+
+- `Fn`：要绑定的函数或可调用对象。
+- `Args`：参数列表，这些参数将在调用时传递给 `Fn`。
+
+### `std::bind()` 的返回值
+
+`std::bind()` 返回一个可调用对象，该对象可以像函数一样被调用，调用时将使用提供的参数。返回类型不是一个具体的类型，因此通常需要使用 `auto` 或 `std::function` 来接受返回的对象。
+
+### 示例用法
+
+以下是一些示例，演示了 `std::bind()` 的用法：
+
+#### 示例 1：绑定全局函数
+
+```cpp
+#include <iostream>
+#include <functional>
+
+void greet(const std::string& name) {
+    std::cout << "Hello, " << name << "!" << std::endl;
+}
+
+int main() {
+    auto greetFn = std::bind(greet, "Alice");
+    greetFn(); // 调用 greet("Alice")
+    return 0;
+}
+```
+
+#### 示例 2：绑定成员函数
+
+```cpp
+#include <iostream>
+#include <functional>
+
+class MyClass {
+public:
+    void printNumber(int num) {
+        std::cout << "Number: " << num << std::endl;
+    }
+};
+
+int main() {
+    MyClass obj;
+    auto printFn = std::bind(&MyClass::printNumber, &obj, std::placeholders::_1);
+    printFn(42); // 调用 obj.printNumber(42)
+    return 0;
+}
+```
+
+#### 示例 3：绑定函数对象
+
+```cpp
+#include <iostream>
+#include <functional>
+
+class Adder {
+public:
+    int operator()(int a, int b) {
+        return a + b;
+    }
+};
+
+int main() {
+    Adder add;
+    auto addFn = std::bind(add, std::placeholders::_1, std::placeholders::_2);
+    int result = addFn(10, 20); // 调用 add(10, 20)
+    std::cout << "Result: " << result << std::endl;
+    return 0;
+}
+```
+
+### 占位符 `std::placeholders::_1`, `_2`, ...
+
+`std::bind()` 中的 `std::placeholders::_1`, `std::placeholders::_2`, ... 是用来占位的特殊标记。它们表示参数的位置，允许你在绑定时指定哪些参数将被传递，哪些将保留以后填充。
+
+### 使用 `std::function` 来保存可调用对象
+
+通常，你可以使用 `std::function` 来保存 `std::bind()` 返回的可调用对象，以便稍后调用它们。这允许你在运行时动态决定要调用哪个函数或函数对象。
+
+```cpp
+#include <iostream>
+#include <functional>
+
+int add(int a, int b) {
+    return a + b;
+}
+
+int subtract(int a, int b) {
+    return a - b;
+}
+
+int main() {
+    std::function<int(int, int)> operation;
+    
+    bool useAddition = true;
+    if (useAddition) {
+        operation = std::bind(add, std::placeholders::_1, std::placeholders::_2);
+    } else {
+        operation = std::bind(subtract, std::placeholders::_1, std::placeholders::_2);
+    }
+
+    int result = operation(10, 5); // 动态调用 add() 或 subtract()
+    std::cout << "Result: " << result << std::endl;
+
+    return 0;
+}
+```
+
+这些示例展示了 `std::bind()` 的一些基本用法，你可以根据需要灵活地绑定函数和参数，使代码更模块化和可复用。
+
+## C++ std::string  详解
+
+`std::string` 是 C++ 标准库中的字符串类，提供了在处理字符串时非常方便和强大的功能。以下是关于 `std::string` 的详解：
+
+1. **包含头文件**：
+
+   要使用 `std::string`，需要包含头文件 `<string>`，通常可以这样做：
+
+   ```cpp
+   #include <string>
+   ```
+
+2. **字符串的创建和初始化**：
+
+   可以使用多种方式来创建和初始化 `std::string`：
+
+   ```cpp
+   std::string str1;           // 创建一个空字符串
+   std::string str2 = "Hello"; // 创建并初始化一个字符串
+   std::string str3(5, 'a');   // 创建一个包含 5 个 'a' 的字符串
+   ```
+
+3. **字符串的基本操作**：
+
+   `std::string` 支持许多基本操作，包括连接、比较、子字符串等等。
+
+   - 连接字符串：
+
+     ```cpp
+     std::string str1 = "Hello";
+     std::string str2 = " World";
+     std::string result = str1 + str2; // 连接两个字符串
+     ```
+
+   - 比较字符串：
+
+     ```cpp
+     std::string str1 = "apple";
+     std::string str2 = "banana";
+     int cmp = str1.compare(str2); // 比较两个字符串，返回负数、零或正数
+     ```
+
+   - 提取子字符串：
+
+     ```cpp
+     std::string str = "Hello, World!";
+     std::string sub = str.substr(0, 5); // 提取从索引 0 开始的 5 个字符
+     ```
+
+4. **字符串的访问**：
+
+   `std::string` 可以像数组一样访问其字符。
+
+   ```cpp
+   std::string str = "Hello";
+   char firstChar = str[0]; // 获取第一个字符 'H'
+   ```
+
+5. **字符串的长度和大小**：
+
+   可以使用 `length()` 或 `size()` 方法获取字符串的长度。
+
+   ```cpp
+   std::string str = "Hello";
+   int len = str.length(); // 获取字符串长度
+   ```
+
+6. **字符串的搜索和替换**：
+
+   `std::string` 提供了查找和替换子字符串的方法。
+
+   - 查找子字符串：
+
+     ```cpp
+     std::string str = "Hello, World!";
+     size_t found = str.find("World"); // 查找子字符串的位置
+     ```
+
+   - 替换子字符串：
+
+     ```cpp
+     std::string str = "Hello, World!";
+     str.replace(7, 5, "C++"); // 用 "C++" 替换从索引 7 开始的 5 个字符
+     ```
+
+7. **字符串的迭代**：
+
+   可以使用迭代器遍历字符串的字符。
+
+   ```cpp
+   std::string str = "Hello";
+   for (auto it = str.begin(); it != str.end(); ++it) {
+       char c = *it;
+   }
+   ```
+
+8. **字符串的转换**：
+
+   `std::string` 可以与其他数据类型进行转换，例如整数和浮点数。
+
+   ```cpp
+   std::string str = "42";
+   int num = std::stoi(str); // 将字符串转换为整数
+   ```
+
+9. **字符串的输入和输出**：
+
+   可以使用流操作符 `<<` 和 `>>` 来进行字符串的输入和输出。
+
+   ```cpp
+   std::string str;
+   std::cin >> str; // 从标准输入读取字符串
+   std::cout << str; // 输出字符串到标准输出
+   ```
+
+10. **动态调整字符串大小**：
+
+    `std::string` 允许动态调整字符串的大小，以容纳更多或更少的字符。
+
+    ```cpp
+    std::string str = "Hello";
+    str.resize(8, ' '); // 调整字符串大小为 8，用空格填充
+    ```
+
+`std::string` 提供了许多其他功能和方法，以方便地处理字符串。它是 C++ 中处理文本数据的重要工具，可以大大简化字符串操作的复杂性。
+
+## C++ 查找表
+
+C++ 中查找表通常使用数据结构来实现，其中最常用的数据结构之一是关联容器（Associative Containers）或哈希表（Hash Table）。这些数据结构可以用来存储键-值对，以便可以通过键来查找值。
+
+以下是一些常见的 C++ 查找表数据结构和它们的用法：
+
+1. **std::map**：
+   `std::map` 是 C++ 标准库中的关联容器，它使用红黑树实现，可以用来存储键值对，并且按键进行排序。查找操作的时间复杂度是 O(log n)。
+
+   ```cpp
+   #include <map>
+   std::map<std::string, int> myMap;
+   myMap["Alice"] = 25;
+   myMap["Bob"] = 30;
+   int age = myMap["Alice"];  // 查找 Alice 的年龄
+   ```
+
+2. **std::unordered_map**：
+   `std::unordered_map` 也是 C++ 标准库中的关联容器，它使用哈希表实现，查找操作的平均时间复杂度为 O(1)。
+
+   ```cpp
+   #include <unordered_map>
+   std::unordered_map<std::string, int> myMap;
+   myMap["Alice"] = 25;
+   myMap["Bob"] = 30;
+   int age = myMap["Alice"];  // 查找 Alice 的年龄
+   ```
+
+3. **std::set**：
+   `std::set` 是一个有序的集合，用于存储唯一的元素。它使用红黑树实现，查找操作的时间复杂度是 O(log n)。
+
+   ```cpp
+   #include <set>
+   std::set<int> mySet;
+   mySet.insert(10);
+   mySet.insert(20);
+   bool found = mySet.count(10);  // 检查元素是否存在
+   ```
+
+4. **std::unordered_set**：
+   `std::unordered_set` 是一个无序的集合，用于存储唯一的元素。它使用哈希表实现，查找操作的平均时间复杂度为 O(1)。
+
+   ```cpp
+   #include <unordered_set>
+   std::unordered_set<int> mySet;
+   mySet.insert(10);
+   mySet.insert(20);
+   bool found = mySet.count(10);  // 检查元素是否存在
+   ```
+
+这些是 C++ 中常用的查找表数据结构，你可以根据你的需求选择适合的数据结构来实现查找表功能。根据数据量、查找频率以及是否需要元素的排序等因素来选择合适的容器。
+
 ## C++ 哈希表 详解
 
 哈希表（Hash Table），也称为散列表，是一种数据结构，用于高效地存储和检索数据。它通过将数据与一个哈希函数计算的索引关联起来，从而允许在常量时间内进行数据插入、查找和删除操作。C++ 中可以使用标准库提供的 `std::unordered_map` 实现哈希表，以下是哈希表的详细解释：
