--- a/CPP/C-C++06_编程技巧.md
+++ b/CPP/C-C++06_编程技巧.md
@@ -2,6 +2,65 @@
 
 + 常用的编程技巧，使用示例与方法
 
+## C++ /api/too/sucker/open 分割字符串 取出/之内的字符串
+
+要在 C++ 中分割字符串并提取 `/` 之间的子字符串，你可以使用字符串处理函数和迭代来完成。以下是一个示例函数，演示了如何做到这一点：
+
+```cpp
+#include <iostream>
+#include <vector>
+#include <string>
+
+// 分割字符串并提取 '/' 之间的子字符串
+std::vector<std::string> splitAndExtract(const std::string& input) {
+    std::vector<std::string> result;
+    size_t startPos = 0; // 记录子字符串的起始位置
+
+    // 从头到尾遍历输入字符串
+    for (size_t i = 0; i < input.length(); ++i) {
+        if (input[i] == '/') {
+            // 当找到 '/' 时，提取子字符串并加入结果向量
+            std::string subStr = input.substr(startPos, i - startPos);
+            result.push_back(subStr);
+            startPos = i + 1; // 更新子字符串的起始位置
+        }
+    }
+
+    // 处理最后一个子字符串
+    if (startPos < input.length()) {
+        std::string subStr = input.substr(startPos);
+        result.push_back(subStr);
+    }
+
+    return result;
+}
+
+int main() {
+    std::string input = "/api/too/sucker/open";
+    std::vector<std::string> segments = splitAndExtract(input);
+
+    // 输出提取的子字符串
+    for (const std::string& segment : segments) {
+        std::cout << segment << std::endl;
+    }
+
+    return 0;
+}
+```
+
+在这个示例中，`splitAndExtract` 函数接受一个输入字符串，遍历字符串并查找 `/`，每次找到 `/` 时，提取前一个 `/` 和当前 `/` 之间的子字符串，并将其添加到结果向量中。最后，处理最后一个子字符串，然后返回结果向量。
+
+运行示例代码将输出：
+
+```
+api
+too
+sucker
+open
+```
+
+这样，你就可以成功分割字符串并提取其中的子字符串。
+
 ## C uint16_t 怎么存储到uint8_t数组中
 
 将 `uint16_t` 数据存储到 `uint8_t` 数组中需要进行字节拆分，因为 `uint16_t` 是两个字节（16位），而 `uint8_t` 是一个字节（8位）。通常情况下，高位字节（Most Significant Byte，MSB）会存储在数组的前面，低位字节（Least Significant Byte，LSB）会存储在数组的后面。
