update robot notes

--- a/Books/应用机器人学-运动学-动力学与控制技术.md
+++ b/Books/应用机器人学-运动学-动力学与控制技术.md
@@ -122,3 +122,98 @@
 + 四元数在直观保存角轴方面是很好的,并能克服小旋转的病态,确认一组结构允许合成旋转运动的计算。四元数的缺点是 4 个参数必须能够表述一个旋转运动。参数化比角轴更复杂,并且有时失去了其物理意义。四元数相乘并不像矩阵相乘那样简单明了
 
 ## 第二章 旋转运动学
+
+### 全局翻滚角，俯仰角，偏航角
+
++ 绕全局坐标系X轴的旋转被称为翻滚(roll)，绕全局坐标系Y轴的旋转被称为俯仰角(pitch)，绕全局坐标系Z轴的旋转被称为偏航(yaw)。
+
+### 欧拉角
+
++ 绕全局坐标系的Z轴的旋转被称为旋进(即进动,precession)，绕局部坐标系的x轴的旋转被称为章动(nutation)，绕局部坐标系z轴的旋转被称为自转(spin)
+
++ 旋进章动自转角(precession-nutation-spin rotation angles)也称为欧拉角。
+
+## 第三章 定向运动学
+
+## 第四章 运动的运动学
+
+### 螺旋坐标
+
++ 任何刚体运动都可以由沿着某轴的单一平动和绕着该轴的单一旋转运动合成产生。这称为沙勒定理(Chasles theorem)。这样的运动被称为螺旋运动
+
+## 第五章 正向运动学
+
++ 对于给定的一组机器人几何特征，如果指导机器人节点变量，就能够确定机器人中每根连杆的位置和方向。我们可以在每根连杆上建立一个坐标系，并且通过刚体运动方法来确定相邻坐标系的配置，这样的分析被称为正向运动学
+
+### 机器人正向位置运动学
+
++ 正向或者直接运动学是旋转运动中从机器人关节变量空间到笛卡尔坐标系空间的运动变换。
++ 对于一组给定的关节变量，求取末端执行器的位置和方向是正向运动学的主要问题。这个问题可以通过求取用于描述基体连杆坐标系中连杆运动信息的变换矩阵而得到解决
+
++ 对于机械手，列写正向运动学方程的传统方法是通过D-H标记和坐标系处理连杆而获得的。因此，正向运动学是基本的变换运算
+
++ 运动学信息包括位置，速度，加速度和突变。然而，正向运动学通常指的是位置分析，因此正向运动学等效于确定一个综合变换矩阵
+
+### 组装运动学
+
++ 大部分现代工业机器人都有一个主要的机械手和一系列互变的手腕。机械手是多体的，以便他能抓住主要的力学单元，并且为手腕提供一个强有力的运动。
+
++ 可变手腕是复杂多体，主要用来提供绕在腕点的三个旋转自由度。手腕基本连接至机械手的末端点。
++ 机器人的手腕，实际操作不见也可以称为末端执行器
+
+## 第六章 逆向运动学
+
++ 对于给定配制的机器人来说，什么是关节变量呢？这就是逆向运动学研究的问题。
++ 确定关节变量能够简化求解一组非线性耦合代数方程。
+
++ 对于求解逆向运动学问题而言，虽然没有标准方法和常规的应用方法，但是仍有一些求解该问题的分析方法和数值解法。
++ 逆向运动学的主要困难是多解
+
+### 解耦技术
+
++ 依据末端执行器的位置和方向确定关节变量，称之为逆向运动学。数学上，逆向运动学主要寻找矢量q中的元素
+
++ 计算机控制的机器人通常在关节变量空间中被驱动，然而通常在全局笛卡尔坐标系中表述被操作的物体。
++ 因此，在机器人学中，必须携带关节空间和笛卡尔空间之间的运动信息。为了控制末端执行器到达一个物体的配置，必须求解逆向运动。
++ 因此，我们需要知道在期望的方向上达到期望点所需的关节变量是什么
+
++ 6自由度机器人的正向运动结果是一个4 * 4的变换矩阵
+
++ 有可能将逆向运动学问题解耦成两个自问题，即众所周知的逆向位置运动学问题和逆向方向运动学问题。
++ 这样解耦的一个实际结果就是将这个问题分解为两个独立的问题，每个问题只有3个未知数。按照解耦原理，机器人的综合变换矩阵可以分解为一个平动和一个转动。
+
+### 逆向运动技术比较
+
++ 显然，当期望的末端执行器坐标位置超出了机器人的工作范围时，机器人关节变量没有任何实解。在这种情况下，平方根符号将使综合结果为负。
++ 因此，通常来说，逆向运动学问题是否存在解取决于机器人的几何配置
+
++ 正常情况即当关节数量为6时。假设没有多余的自由度，机器人末端执行器的配置在工作空间范围之内，逆向运动学的解有无数多个。为了达到同一末端执行器空间位置，不同解均相当于可能的配置
+
++ 总的来说，当机器人逆向运动学的解存在时，其解不是唯一的。出现多解，这是因为机器人以不同的配置可以达到工作空间范围内的同一点
+
+### 逆向运动技术
+
++ 可以用很多种方法求解机器人的逆向运动学问题，例如解耦，逆变换，迭代，螺旋代数，双重矩阵，双重四元数和其他几何技术。
+
++ 迭代法通常要求大量的计算，而且他并不能保证收敛于正确解。机器人几乎不可能接近于齐次且衰退的配置。迭代求解法也缺乏从多个可能的解中选择最合适解的方法
+
+### 奇异配置
+
++ 总的来说，对于任何机器人来说，冗余与否均有可能发现一些配置，称之为奇异配置。
++ 在奇异配置总，末端执行器自由度的数目相对于产生动作的维数是次要的。当下列情况发生时会发生奇异配置：
+  + 棱柱关节的两个轴是平行的，
+  + 旋转关节的两个轴是相同的。
+
++ 在奇异位置处，末端执行器失去一个或者更多的自由度，因为运动方程是线性相关的或者是不确定的。随着移动末端执行器所要求的速度理论上是无限的时，必须避免奇异位置。
+
++ 雅可比矩阵不再满足秩的配置相当于机器人具有奇异性，通常有两种类型：
+  + 工作空间边界奇异性(Work-space boundary singularities)。当机械手全部伸出或者自身完全折回时，便会出工作空间边界奇异性。在这种情况中，末端执行器接近或者就在工作空间边界处
+  + 工作空间内部奇异性(Work-space interior singularities)。这种情况出现在远离边界处。在这种情况中，通常有两个或者更多轴排成了一行
+
++ 在机器人学中，辨别和避开奇异性配置是非常重要的。主要原因如下：
+  + 运动的确定方向无法达到
+  + 一些关节速度是无限的
+  + 一些关节转矩是无限的
+  + 逆向运动学问题不存在唯一解
+
+## 第七章 角速度
