--- a/CPP/C-C++01_2_语言基础.md
+++ b/CPP/C-C++01_2_语言基础.md
@@ -2,6 +2,45 @@
 
 + C/C++ 编程语言理论基础
 
+## C++ 默认参数
+
+在 C++ 中，函数的默认参数是一种允许您为函数的参数提供默认值的机制。这意味着您可以在定义函数时指定某个参数的默认值，如果调用函数时未提供该参数的值，函数将使用默认值。这对于使函数更灵活且易于使用非常有用。
+
+以下是一个简单的示例，演示了如何在 C++ 函数中使用默认参数：
+
+```cpp
+#include <iostream>
+
+// 函数定义时指定默认参数
+void greet(std::string name = "Guest") {
+    std::cout << "Hello, " << name << "!" << std::endl;
+}
+
+int main() {
+    // 调用函数时未提供参数值，将使用默认值
+    greet(); // 输出 "Hello, Guest!"
+
+    // 也可以提供参数值，覆盖默认值
+    greet("Alice"); // 输出 "Hello, Alice!"
+
+    return 0;
+}
+```
+
+在上述示例中，`greet` 函数接受一个名为 `name` 的参数，但它在函数定义中指定了默认值 `"Guest"`。因此，在调用函数时，如果不提供 `name` 参数的值，函数将使用默认值。但如果提供了参数值，它将覆盖默认值。
+
+请注意以下几点关于默认参数的注意事项：
+
+1. 默认参数必须从右向左添加。也就是说，如果您在函数参数列表中为某个参数指定默认值，那么该参数右侧的所有参数都必须有默认值。例如，`void func(int a, int b = 0)` 是有效的，但 `void func(int a = 0, int b)` 是无效的。
+
+2. 一旦为某个参数指定了默认值，后续的参数都必须有默认值，无法再定义没有默认值的参数。这是因为在函数调用时，如果您省略了参数，编译器无法确定省略的参数是哪个。
+
+3. 默认参数的值可以是常量、全局变量、静态变量或者常量表达式。
+
+4. 在函数声明和函数定义中都可以指定默认参数。通常，将默认参数放在函数声明中，而不是函数定义中，以便其他文件中的代码可以使用相同的默认参数。函数定义中通常省略默认参数的值，因为它已经在声明中定义过了。
+
+默认参数是一种提高函数灵活性和可用性的重要工具，它允许您为不同的情况提供合适的默认行为，同时允许调用者在需要时覆盖默认值。
+
 ## C++ std::set 详解
 
 `std::set` 是 C++ 标准库中的一个关联容器，它实现了有序不重复元素的集合。在 `std::set` 中，元素按照升序排序，并且不允许重复元素的存在。`std::set` 是基于红黑树（Red-Black Tree）数据结构实现的，因此插入、删除和查找操作都具有对数时间复杂度（O(log n)）。
