--- a/CPP/C-C++06_编程技巧.md
+++ b/CPP/C-C++06_编程技巧.md
@@ -2,6 +2,79 @@
 
 + 常用的编程技巧，使用示例与方法
 
+## C++ 后端开发 处理多个请求路径的方法 查表法
+
+在 C++ 后端开发中，处理多个请求路径的一种有效方法是使用查表法，也就是使用数据结构来存储请求路径与相应处理函数之间的映射关系。您可以使用`std::map`、`std::unordered_map`或自定义数据结构来实现路由表。
+
+以下是一个使用`std::unordered_map`的示例：
+
+```cpp
+#include <iostream>
+#include <unordered_map>
+#include <functional>
+#include <boost/asio.hpp>
+#include <boost/beast.hpp>
+
+namespace asio = boost::asio;
+namespace beast = boost::beast;
+namespace http = beast::http;
+
+using RequestHandler = std::function<void(http::request<http::string_body>&, http::response<http::string_body>&)>;
+
+int main() {
+    asio::io_context io_context;
+    asio::ip::tcp::acceptor acceptor(io_context, asio::ip::tcp::endpoint(asio::ip::tcp::v4(), 8080));
+
+    // 创建请求路径到处理函数的映射表
+    std::unordered_map<std::string, RequestHandler> route_map;
+
+    // 添加路由规则
+    route_map["/"] = [](http::request<http::string_body>& request, http::response<http::string_body>& response) {
+        response.result(http::status::ok);
+        response.set(http::field::content_type, "text/plain");
+        response.body() = "Hello, World!";
+    };
+
+    route_map["/about"] = [](http::request<http::string_body>& request, http::response<http::string_body>& response) {
+        response.result(http::status::ok);
+        response.set(http::field::content_type, "text/plain");
+        response.body() = "About Us";
+    };
+
+    while (true) {
+        asio::ip::tcp::socket socket(io_context);
+        acceptor.accept(socket);
+
+        beast::flat_buffer buffer;
+        http::request<http::string_body> request;
+        http::read(socket, buffer, request);
+
+        // 获取请求的路径
+        std::string path = request.target().to_string();
+
+        // 查找并调用对应的处理函数
+        auto it = route_map.find(path);
+        if (it != route_map.end()) {
+            http::response<http::string_body> response{request.version()};
+            it->second(request, response);
+            response.prepare_payload();
+            http::write(socket, response);
+        } else {
+            // 处理未知路径请求
+            http::response<http::string_body> response{http::status::not_found, request.version()};
+            response.set(http::field::content_type, "text/plain");
+            response.body() = "Not Found";
+            response.prepare_payload();
+            http::write(socket, response);
+        }
+    }
+
+    return 0;
+}
+```
+
+在这个示例中，我们创建了一个`std::unordered_map`来存储请求路径与相应的处理函数之间的映射关系。然后，我们根据请求的路径查找映射表中的处理函数，并调用它来处理请求。这种方法允许您轻松地添加、删除或修改路由规则，以适应不同的请求路径。
+
 ## C++ /api/too/sucker/open 分割字符串 取出/之内的字符串
 
 要在 C++ 中分割字符串并提取 `/` 之间的子字符串，你可以使用字符串处理函数和迭代来完成。以下是一个示例函数，演示了如何做到这一点：
@@ -2135,7 +2208,7 @@ int main() {
   + `auto func(int a)->int;`
 
 + 当使用decltype进行返回类型推导的时候，是无法获取到模板参数的，需要使用declval进行辅助推导
-  ```
+  ```c++
     //这种方法无法做到
     template <typename T1, typename T2>
     decltype(a + b) compose(T1 a, T2 b);
@@ -2145,7 +2218,7 @@ int main() {
     decltype(std::declval<T1>() + std::declval<T2>()) compose(T1 a, T2 b);
   ``` 
 + 由于使用declval()这种方法太过于繁琐，所以搞出了这东西
-  ```
+  ```c++
     template <typename T1, typename T2>
     auto compose(T1 a, T2 b) -> decltype(a + b);
   ``` 
@@ -2199,7 +2272,7 @@ int main() {
   + #pragma once 和 _Pragma(“once”) 可算作一类，其特点是编译效率高，但可移植性差（编译器不支持，会发出警告，但不会中断程序的执行）；
   + 而 #ifndef 的特点是可移植性高，编译效率差。读者可根据实际情况，挑选最符合实际需要的解决方案。
 + 在某些场景中，考虑到编译效率和可移植性，#pragma once 和 #ifndef 经常被结合使用来避免头文件被重复引入。比如说：
-  ```
+  ```c++
     #pragma once
     #ifndef _STUDENT_H
     #define _STUDENT_H
@@ -2214,7 +2287,7 @@ int main() {
 ### struct和class中的成员变量使用冒号
 
 + 表示机构内位域的定义，即该变量占几个bit空间
-  ```
+  ```c++
     typedef struct _XXX{
      
       unsigned char a:4;
@@ -2245,11 +2318,11 @@ int main() {
 
 + 冒号后面跟的是赋值，这种写法是C++的特性
   + 例如
-    ```
+    ```c++
       A(int aa, int bb):a(aa), b(bb){}
     ``` 
   + 相当于
-    ```
+    ```c++
       A(int aa, int bb)
       {
         a = aa;
@@ -2275,7 +2348,7 @@ int main() {
 
 + C++的类有四类特殊的成员函数，分别是：默认构造函数，析构函数，拷贝函数以及拷贝赋值函数。如果程序没有显式地为一个类定义某个特殊成员函数，而又需要用到该特殊成员函数时，编译器就会隐式地为这个类生成一个默认的特殊成员函数
 + 例如：
-  ```
+  ```c++
     class X {
       private:
         int a;
@@ -2283,7 +2356,7 @@ int main() {
     X x;  // 可以编译通过，编译器隐式生成默认构造函数
   ``` 
 + 但是如果X 显式的自定义了非默认构造函数，却没有定义默认构造函数，下面的代码会出现编译错误
-  ```
+  ```c++
     class X {
       public:
         X(int i)
@@ -2296,7 +2369,7 @@ int main() {
     X x;  // 错误，默认构造函数X::X()不存在
   ``` 
 + 为了解决上面的问题，我们需要自定义默认构造函数，例如：
-  ```
+  ```c++
     class X {
       public:
         X(){};  // 手动定义默认构造函数
@@ -2316,7 +2389,7 @@ int main() {
 
 + defaulted 函数特性仅用于类的特殊成员函数，且该特殊成员函数没有默认参数。
 + 例如：
-  ```
+  ```c++
     class X {
       public:
         int f() = default;  // 错误， f()非特殊成员函数
@@ -2326,7 +2399,7 @@ int main() {
   ``` 
 + 既可以在类体内定义(inline)，也可以在类体外(out-of-line)定义
 + 例如：
-  ```
+  ```c++
     class X {
     public:
         X() = default; // inline
@@ -2344,7 +2417,7 @@ int main() {
 + 为了显示的禁用某个函数，C++11标准引入了一个新特性：deleted函数
 
 + 使用：
-  ```
+  ```c++
     class X{            
     public: 
       X(); 
@@ -2366,7 +2439,7 @@ int main() {
 #### boost中的使用
 
 + 在支持C++11标准下,noncopyable类定义如下：
-  ```
+  ```c++
     class noncopyable {
         protected:
             noncopyable() = default;
