--- a/Books/设计模式_可复用面向对象软件的基础.md
+++ b/Books/设计模式_可复用面向对象软件的基础.md
@@ -115,3 +115,126 @@
 + 不将变量声明为某个特定的具体类的实例对象，而是让它遵循从抽象类所定义的接口。这是本书设计模式的一个常见主题。
 
 ##### 运用复用机制
+
++ 面向对象系统中功能复用的两种最常用技术是类继承和对象组合(object composition)
++ 类继承允许你根据其他类的实现来定义一个类的实现。这种通过生成子类的复用通常被称为白箱复用(white-box reuse)。
++ 术语 白箱 是相对可视性而言：在继承方式中，父类的内部细节对子类可见
+
++ 对象组合是类继承之外的另一种复用选择。新的更复杂的功能可以通过组装或组合对象来获得。
++ 对象组合要求被组合的对象具有良好定义的接口。这种复用风格被称为黑箱复用(black-box reuse)，因为对象的内部细节是不可见的。对象只以 黑箱 的形式出现
+
++ 类继承的优点：
+  + 在编译时刻静态定义的，且可直接使用，因为程序设计语言直接支持类继承。
+  + 较方便地改变被复用的实现。
+  + 当一个子类重定义一些而不是全部操作时，他也能影响他所继承的操作，只要在这些操作中调用了被重定义的操作。
+
++ 类继承的缺点：
+  + 因为继承在编译时刻就定义了，所以无法在运行时刻改变从父类继承的实现
+  + 父类通常至少定义了部分子类的具体表示
+  + 因为继承对子类揭示了其父类的实现细节，所以继承常被认为破坏了封装性
+  + 子类中的实现与他的父类有紧密的依赖关系，以至于父类实现中的任何变化必然会导致子类的变化
+
++ 当你需要复用子类时，实现上的依赖性就会产生一些问题。如果继承下来的实现不适合解决新的问题，则父类必须重写或被其他更适合的类替换。这种依赖关系限制了灵活性并最终限制了复用性。
++ 一个可用的解决方法就是只继承抽象类，因为抽象类通常提供较少的实现
+
++ 对象组合是通过获得对其他对象的引用而在运行时刻动态定义的。
++ 组合要求对象遵守彼此的接口约定，进而要求更仔细的定义接口，而这些接口并不妨碍你将一个对象和其他对象一起使用。
++ 这会产生良好的结果：
+  + 因为对象只能通过接口访问，所以我们并不破坏封装性
+  + 只要类型一致，运行时刻还可以用一个对象来替代另一个对象
+  + 更进一步，因为对象的实现是基于接口写的，所以实现上存在较少的依赖关系
+
++ 对象组合对系统设计还有另一个作用，既优先使用对象组合有助于你保持每个类被封装，并被集中在单个任务上。这样类和类继承层次会保持较小规模，并且不太可能增长为不可控制的庞然大物。
++ 另一方面，基于对象组合的设计会有更多的对象(而有较少的类)，且系统的行为将依赖于对象间的关系而不是被定义在某个类中
+
++ 这导出了我们的面向对象设计的第二个原则：
+  + 优先使用对象组合，而不是类继承。
+
++ 理想情况下，你不应该为获得复用而去创建新的构件。你应该能够只使用对象组合技术，通过组装已有的构建就能获得你需要的功能。
++ 但是事实很少如此，因为可用构建的集合实际上并不足够丰富。使用继承的复用使得创建新的构建要比组装旧的构建来的容易。
++ 这样，继承和对象组合常一起使用。
+
++ 委托(delegation)是一种组合方法，他使组合具有与继承同样的复用能力。在委托方式下，有两个对象参与处理一个请求，接受请求的对象将操作委托给他的代理者(delegate)
++ 这类似于子类将请求交给他的父类处理。使用继承时，被继承的操作总能引用接受请求的对象，C++中通过this成员变量
++ 委托是对象组合的特例。它告诉你对象组合作为一个代码复用机制可以代替继承
+
++ 另一种功能复用技术(并非严格的面向对象技术)是参数化类型(parameterized type)，也就是类属(generic)或者模板(templates (C++))。他允许你在定义一个类型时并不指定该类型所用到的其他所有类型。未经指定的类型在使用时以参数形式提供。
+
++ 参数化类型给我们提供了除了类继承和对象组合外的第三种方法来组合面向对象系统中的行为。许多设计可以使用这三种技术中的任何一种来实现。
++ 实现一个以元素比较操作为可变元的排序例程，可有如下方法：
+  + 通过子类实现该操作
+  + 实现为传给排序例程的对象的职责
+  + 作为C++模板或Ada类属的参数，以指定元素比较操作的名称
+
+#### 关联运行时刻和编译时刻的结构
+
++ 一个面向对象程序运行时刻的结构通常与他的代码结构相差很大。
++ 代码结构在编译时刻就被确定下来了，他由继承关系固定的类组成。而程序的运行时刻结构是由快速变化的通信对象网格组成。
++ 事实上，两个结构是彼此独立的，试图由一个区理解另一个就好像试图从静态的动植物分类去理解活生生的生态系统的动态性。反之亦然。
+
++ 聚合(aggregation)，意味着一个对象拥有另一个对象或对另一个对象负责。
++ 一般我们称一个对象包含另一个对象或者另一个对象的一部分。聚合意味着聚合对象和其所有者具有相同的生命周期
+
+#### 设计应支持变化
+
++ 一些导致重新设计的一般原因，以及解决这些问题的设计模式：
+  + 通过显示的指定一个类来创建对象 ： 在创建对象时指定类名将使你受特定实现的约束而不是特定接口的约束。这会使未来的变化更复杂。要避免这种情况，应该间接地创建对象
+    + 设计模式： Abstract Factory, Factory Method, Prototype
+  + 对特殊操作的依赖 ： 当你为请求指定一个特殊的操作时，完成该请求的方式就固定下来了。为避免把请求代码写死，你将可以在编译时刻或运行时刻很方便地改变响应请求的方式
+    + 设计模式： Chain of Resposibility, Command
+  + 对硬件和软件平台的依赖 ： 外部的操作系统接口和应用编成接口(API)在不同的软硬件平台上是不同的。依赖于特定平台的软件将很难移植到其他平台上，甚至都很难跟上本地平台的更新。所以设计系统时限制其平台相关性就很重要了。
+    + 设计模式： Abstract Factory, Bridge
+  + 对对象表示或实现的依赖 ： 知道对象怎样表示，保存，定位或实现的客户在对象发生变化时可能也需要变化。对客户隐藏这些信息能够阻止连锁变化
+    + 设计模式： Abstract Factory, Bridge, Memento, Proxy
+  + 算法依赖 ： 算法在开发和复用时常常被扩展，优化和替代。依赖于某个特定算法的对象在算法发生变化时不得不变化。因此有可能发生变化的算法应该被孤立起来。
+    + 设计模式： Builder, Iterator, Strategy, Template Method, Visitor
+  + 紧耦合 ： 紧耦合的类很难孤立的被复用，因为它们是互相依赖的。紧耦合产生单块的系统，要改变或者删掉一个类，你必须理解和改变其他许多类。这样的系统是一个很难学习移植和维护的密集体。松散耦合提高了一个类本身被复用的可能性，并且系统更易于学习，移植，修改和扩展。设计模式使用抽象耦合和分层技术来提高系统的松散耦合性。
+    + 设计模式： Abstract Factory, Command, Facade, Mediator, Observer, Chain of Responsibility
+  + 通过生成子类来扩充功能 ： 通常很难通过定义子类来定制对象。每一个新类都有固定的实现开销(初始化，终止处理等)。子类方法会导致类爆炸，因为即使对于一个简单的扩充，你也不得不引入许多新的子类。一般的对象组合技术和具体的委托技术，是继承之外组合对象行为的另一种灵活方法。新的功能可以通过以新的方式组合已有对象，而不是通过定义已存在类的子类的方式加到应用中去。另一方面，过多使用对象组合会使设计难于理解。许多设计模式产生的设计中，你可以定义一个子类，且将它的实例和已存在实例进行组合来引入定制的功能。
+    + 设计模式：Bridge, Chain of Responsibility, Composite, Decorator, Observer, Strategy
+  + 不能方便地对类进行修改 ： 有时你不得不改变一个难以修改的类。
+    + 设计模式： Adapter, Decorator, Visitor
+
++ 设计模式在开发如下三类主要软件中所起作用：
+  + 应用程序
+  + 工具箱
+  + 框架
+
++ 如果要建造像文档编辑器的应用程序(Application Program)，那么它的内部复用性，可维护性和可扩充性是要优先考虑的。
++ 内部复用性确保你不会做多余的设计和实现
++ 设计模式通过减少依赖型来提高内部复用性。
++ 松散耦合也增强了一类对象与其他多个对象协作的可能性。
+
+### 怎样选择设计模式
+
++ 考虑设计模式是怎样解决设计问题的
+
++ 浏览模式的意图部分
+
++ 研究模式怎样互相关联
+
++ 研究目的相似的模式
+
++ 检查重新设计的原因
+
++ 考虑你的设计中那些是可变的
+
+### 怎样使用设计模式
+
++ 大致浏览一遍模式。 
+  + 特别注意其适用性部分和效果部分，确定它适合你的问题
+
++ 回头研究结构部分，参与者部分和协作部分
+  + 确保你理解这个模式的类和对象以及他们是怎样关联的
+
++ 选择模式参与者的名字，使他们在应用上下文中有意义
+
++ 定义类
+  + 声明它们的接口，建立他们的继承关系，定义代表数据和对象引用的实例变量。
+  + 识别模式会影响的你的应用中存在的类，作出相应的修改
+
++ 定义模式中专用于应用的操作名称
+  + 名字一般依赖于应用。使用与每一个操作相关联的责任和写作作为指导
+  + 名字约定要一致
+
++ 实现执行模式中责任和写作的操作
